--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,18 +2,7 @@
 name = "cz_conventional_commits"
 version = "0.1.0"
 version_files = [
-    "src/__version__.py",
+    "pythonium/__version__.py",
+    "setup.py:version",
     "pyproject.toml:version"
-]
-style = [
-    ["qmark", "fg:#ff9d00 bold"],
-    ["question", "bold"],
-    ["answer", "fg:#ff9d00 bold"],
-    ["pointer", "fg:#ff9d00 bold"],
-    ["highlighted", "fg:#ff9d00 bold"],
-    ["selected", "fg:#cc5454"],
-    ["separator", "fg:#cc5454"],
-    ["instruction", ""],
-    ["text", ""],
-    ["disabled", "fg:#858585 italic"]
 ]
