--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
   testing:
-      - name: Run tests with pytest
-        run: python setup.py test 
+    name: Run tests with pytest
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      run: python setup.py test 
   coverage_report:
     name: Generate coverage report
     needs: testing
