--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,15 +19,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-  testing:
-    name: Run tests with pytest
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      run: python setup.py test 
+      - name: Run tests with pytest
+        run: python setup.py test 
   coverage_report:
     name: Generate coverage report
-    needs: testing
+    needs: build
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
