--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,40 +30,8 @@ jobs:
           cov-omit-list: 'test/*, temp/main3.py, temp/main4.py'
           cov-threshold-single: ${{ env.COVERAGE_SINGLE }}
           cov-threshold-total: ${{ env.COVERAGE_TOTAL }}
-
-      - name: Coverage single fail - new issue
-        if: ${{ steps.pytester-cov.outputs.cov-threshold-single-fail == 'true' }}
-        uses: nashmaniac/create-issue-action@v1.1
+      - name: Comment PR on coverage total fails
+        uses: thollander/actions-comment-pull-request@master
         with:
-          title: Pytest coverage single falls below minimum ${{ env.COVERAGE_SINGLE }}
-          token: ${{secrets.GITHUB_TOKEN}}
-          assignees: ${{github.actor}}
-          labels: worflow-failed
-          body: ${{ steps.pytester-cov.outputs.output-table }}
-
-      - name: Coverage single fail - exit
-        if: ${{ steps.pytester-cov.outputs.cov-threshold-single-fail == 'true' }}
-        run: |
-          echo "cov single fail ${{ steps.pytester-cov.outputs.cov-threshold-single-fail }}"
-          exit 1
-
-      - name: Coverage total fail - new issue
-        if: ${{ steps.pytester-cov.outputs.cov-threshold-total-fail == 'true' }}
-        uses: nashmaniac/create-issue-action@v1.1
-        with:
-          title: Pytest coverage total falls below minimum ${{ env.COVERAGE_TOTAL }}
-          token: ${{secrets.GITHUB_TOKEN}}
-          assignees: ${{github.actor}}
-          labels: worflow-failed
-          body: ${{ steps.pytester-cov.outputs.output-table }}
-
-      - name: Coverage total fail - exit
-        if: ${{ steps.pytester-cov.outputs.cov-threshold-total-fail == 'true' }}
-        run: |
-          echo "cov single fail ${{ steps.pytester-cov.outputs.cov-threshold-total-fail }}"
-          exit 1
-
-      - name: Commit pytest coverage table
-        uses: peter-evans/commit-comment@v1
-        with:
-          body: ${{ steps.pytester-cov.outputs.output-table }}
+          message: ${{ steps.pytester-cov.outputs.output-table }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
