--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         uses: julianwachholz/flake8-action@v1.1.0
         with:
           checkName: "Python Lint"
-          path: path/to/files
+          path: pythonium
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: jamescurtin/isort-action@master
