--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,16 @@ jobs:
       COVERAGE_SINGLE: 60
       COVERAGE_TOTAL: 60
     steps:
+      - uses: actions/checkout@v2
+      - name: Install Python 3
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 pytest isort
+          pip install -r requirements.txt
       - name: pytester-cov
         id: pytester-cov
         uses: alexanderdamiani/pytester-cov@v1.0.0
