--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,28 +28,21 @@ jobs:
       COVERAGE_SINGLE: 60
       COVERAGE_TOTAL: 60
     steps:
-      - uses: actions/checkout@v2
-      - name: Install Python 3
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
-      - name: Install dependencies
+      - name: run tests
+        id: tests
         run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest isort
-          pip install -r requirements.txt
-      - name: pytester-cov
-        id: pytester-cov
-        uses: alexanderdamiani/pytester-cov@v1.0.0
+          pip install coverage
+          coverage run --source=pythonium -m pytest
+      - name: compute coverage
+        id: coverage
+        run: |
+          coverage report
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v1
         with:
-          pytest-root-dir: './pythonium'
-          cov-threshold-single: ${{ env.COVERAGE_SINGLE }}
-          cov-threshold-total: ${{ env.COVERAGE_TOTAL }}
-      - name: Comment PR on coverage total fails
-        uses: thollander/actions-comment-pull-request@master
-        with:
-          message: ${{ steps.pytester-cov.outputs.output-table }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: codecov-pythonium
+          fail_ci_if_error: true 
+          verbose: true 
   stlye:
     runs-on: ubuntu-latest
     needs: build
