--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest isort
+          pip install flake8 pytest isort coverage
           pip install -r requirements.txt
   tests:
     runs-on: ubuntu-latest
@@ -31,7 +31,6 @@ jobs:
       - name: run tests
         id: tests
         run: |
-          pip install coverage
           coverage run --source=pythonium -m pytest
       - name: compute coverage
         id: coverage
