--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,18 @@ jobs:
           pip install -r requirements.txt
   tests:
     runs-on: ubuntu-latest
-    needs: build
     env:
-      COVERAGE_SINGLE: 60
-      COVERAGE_TOTAL: 60
+      OS: ubuntu-latest
+      PYTHON: '3.9'
     steps:
+      - uses: checkout@v2
+        with:
+          fetch-depth: ‘2’
+
+      - name: Setup Python
+        uses: actions/setup-python@master
+        with:
+          python-version: 3.7
       - name: run tests
         id: tests
         run: |
