--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,15 +23,11 @@ jobs:
           pip install -r requirements.txt
   tests:
     runs-on: ubuntu-latest
-    needs: build
     env:
       OS: ubuntu-latest
       PYTHON: '3.9'
     steps:
-      - uses: checkout@v2
-        with:
-          fetch-depth: ‘2’
-
+      - uses: actions/checkout@v2
       - name: Setup Python
         uses: actions/setup-python@master
         with:
