--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest isort coverage
+          pip install flake8 pytest isort
           pip install -r requirements.txt
   tests:
     runs-on: ubuntu-latest
@@ -27,19 +27,16 @@ jobs:
       OS: ubuntu-latest
       PYTHON: '3.9'
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@master
       - name: Setup Python
         uses: actions/setup-python@master
         with:
           python-version: 3.7
-      - name: run tests
-        id: tests
+      - name: Generate coverage report
         run: |
-          coverage run --source=pythonium -m pytest
-      - name: compute coverage
-        id: coverage
-        run: |
-          coverage report
+          pip install pytest
+          pip install pytest-cov
+          pytest --cov=./ --cov-report=xml
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
