--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,12 +22,23 @@ jobs:
           pip install flake8 isort
           pip install -r requirements.txt
   tests:
-    runs-on: ubuntu-latest
-    needs: build
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    env:
+      OS: ${{ matrix.os }}
+      PYTHON: '3.7'
     steps:
+      - uses: actions/checkout@master
+      - name: Setup Python
+        uses: actions/setup-python@master
+        with:
+          python-version: 3.7
       - name: Generate coverage report
-        shell: pwsh
         run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
           pip install pytest
           pip install pytest-cov
           pytest --cov=./ --cov-report=xml
