--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,19 +9,6 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install Python 3
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 isort
-          pip install -r requirements.txt
-  tests:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -35,13 +22,26 @@ jobs:
         uses: actions/setup-python@master
         with:
           python-version: 3.7
-      - name: Generate coverage report
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install flake8 isort
           pip install -r requirements.txt
           pip install pytest
           pip install pytest-cov
-          pytest --cov=./ --cov-report=xml
+  tests:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    env:
+      OS: ${{ matrix.os }}
+      PYTHON: '3.7'
+    needs: build
+    steps:
+      - name: Generate coverage report
+        run: |
+          pytest --cov=./pythonium --cov-report=xml
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
