--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 isort
           pip install -r requirements.txt
-          pip install pytest
-          pip install pytest-cov
   tests:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -41,6 +38,9 @@ jobs:
     steps:
       - name: Generate coverage report
         run: |
+          python -m pip install --upgrade pip
+          pip install pytest pytest-cov
+          pip install -r requirements.txt
           pytest --cov=./pythonium --cov-report=xml
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v1
@@ -52,6 +52,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 isort
       - name: Run flake8
         uses: julianwachholz/flake8-action@v1.1.0
         with:
