--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
       PYTHON: '3.7'
     needs: build
     steps:
+      - uses: actions/checkout@master
       - name: Generate coverage report
         run: |
           python -m pip install --upgrade pip
@@ -52,6 +53,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - uses: actions/checkout@master
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
