--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,13 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    env:
-      OS: ${{ matrix.os }}
-      PYTHON: '3.7'
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: Setup Python
@@ -27,16 +21,14 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
   tests:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    env:
-      OS: ${{ matrix.os }}
-      PYTHON: '3.7'
+    runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@master
+      - name: Setup Python
+        uses: actions/setup-python@master
+        with:
+          python-version: 3.7
       - name: Generate coverage report
         run: |
           python -m pip install --upgrade pip
@@ -54,6 +46,10 @@ jobs:
     needs: build
     steps:
       - uses: actions/checkout@master
+      - name: Setup Python
+        uses: actions/setup-python@master
+        with:
+          python-version: 3.7
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
