--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,7 @@ jobs:
           python-version: 3.7
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          python setup.py install
   tests:
     runs-on: ubuntu-latest
     needs: build
@@ -53,7 +52,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 isort
+          pip install flake8
       - name: Run flake8
         uses: julianwachholz/flake8-action@v1.1.0
         with:
@@ -61,6 +60,19 @@ jobs:
           path: pythonium
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  imports:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@master
+      - name: Setup Python
+        uses: actions/setup-python@master
+        with:
+          python-version: 3.7
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install isort
       - uses: jamescurtin/isort-action@master
         with:
             requirementsFiles: "requirements.txt"
