--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
       - dev
 
 jobs:
-  build:
+  play-singleplayer:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
@@ -18,12 +18,26 @@ jobs:
         uses: actions/setup-python@master
         with:
           python-version: 3.9
-      - name: Build package
+      - name: Play singleplayer
         run: |
           python setup.py install
+          pythonium --players pythonium.bots.standard_player --metrics
+  play-multiplayer:
+    runs-on: ubuntu-latest
+    needs: play-singleplayer
+    steps:
+      - uses: actions/checkout@master
+      - name: Setup Python
+        uses: actions/setup-python@master
+        with:
+          python-version: 3.9
+      - name: Play multiplayer
+        run: |
+          python setup.py install
+          pythonium --players pythonium.bots.standard_player pythonium.bots.pacific_player --metrics
   tests:
     runs-on: ubuntu-latest
-    needs: build
+    needs: play-multiplayer
     steps:
       - uses: actions/checkout@master
       - name: Setup Python
@@ -44,7 +58,7 @@ jobs:
           verbose: true
   stlye:
     runs-on: ubuntu-latest
-    needs: build
+    needs: play-multiplayer
     steps:
       - uses: actions/checkout@master
       - name: Setup Python
@@ -64,7 +78,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   imports:
     runs-on: ubuntu-latest
-    needs: build
+    needs: play-multiplayer
     steps:
       - uses: actions/checkout@master
       - name: Setup Python
