--- a/Dockerfile.develop
+++ b/Dockerfile.develop
@@ -2,9 +2,9 @@ FROM python:3.9-slim
 
 WORKDIR /usr/src/pythonium
 
-ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
+RUN pip install --upgrade pip
 COPY . .
 RUN python setup.py install
 RUN pip install -r requirements.txt
