--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           python-version: 3.9
       - name: Play singleplayer
         run: |
-          python setup.py install
+          pip install . 
           pythonium run players pythonium.bots.standard_player
   play-multiplayer:
     runs-on: ubuntu-latest
@@ -33,7 +33,7 @@ jobs:
           python-version: 3.9
       - name: Play multiplayer
         run: |
-          python setup.py install
+          pip install .
           pythonium run players pythonium.bots.standard_player pythonium.bots.pacific_player
   tests:
     runs-on: ubuntu-latest
@@ -90,5 +90,3 @@ jobs:
           python -m pip install --upgrade pip
           pip install isort
       - uses: jamescurtin/isort-action@master
-        with:
-            requirementsFiles: "requirements.txt"
