ci: fix isort options in github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,3 +92,4 @@ jobs:
       - uses: jamescurtin/isort-action@master
         with:
             requirementsFiles: "requirements.txt"
+            configuration: "--check-only --diff --trailing-comma --multi-line=3"
